--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
 
   <!--====== Title ======-->
-  <title>CLB Truyền thông YTC - NTU</title>
+  <title>CLB Phát Thanh và Truyền Thông PIJU</title>
 
-  <meta name="description" content="CLB Truyền thông YTC - NTU. Tuổi trẻ Tài năng - Truyền thông Kết nối" />
+  <meta name="description" content="CLB Phát Thanh và Truyền Thông PIJU. Phát Thanh - Truyền thông - Kết nối" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!--====== Favicon Icon ======-->
@@ -85,14 +85,14 @@
           <div class="col-lg-6">
             <div class="banner-content">
               <h2 class="title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">
-                Câu lạc bộ Truyền thông YTC - NTU
+                CLB Phát Thanh và Truyền Thông PIJU
               </h2>
               <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.6s">
-                Câu lạc bộ Truyền thông YTC - NTU được thành lập vào năm 2018
+                CLB Phát Thanh và Truyền Thông PIJU được thành lập vào năm 2021
                 từ những thành viên nhiệt huyết đam mê về truyền thông. Câu
-                lạc bộ là sân chơi cho các bạn sinh viên yêu thích công việc
+                lạc bộ là sân chơi cho các bạn học sinh yêu thích công việc
                 truyền thông và tổ chức sự kiện thông qua các hoạt động thực
-                tế hơn so với lý thuyết trên giảng đường.
+                tế hơn so với lý thuyết.
               </p>
             </div>
           </div>
@@ -173,7 +173,7 @@
                 <h4 class="features-title">
                   <a class="page-scroll" href="#powerful"> Nhóm Kỹ thuật</a>
                 </h4>
-                <h5>(Young Technique)</h5>
+                <h5>(PIJU Technique)</h5>
                 <!-- <p>
                     Tạo ra các sản phẩm truyền thông, thiết kế, quay phim, chụp
                     hình các sự kiện và biên tập các bộ phim ngắn.
@@ -194,7 +194,7 @@
                 <h4 class="features-title">
                   <a class="page-scroll" href="#discover">Nhóm Sự kiện</a>
                 </h4>
-                <h5>(Young Events)</h5>
+                <h5>(PIJU Events)</h5>
                 <!-- <p>
                     Tổ chức các sự kiện, các hoạt động nhảy múa, chương trình
                     trong và ngoài CLB.
@@ -215,7 +215,7 @@
                 <h4 class="features-title">
                   <a class="page-scroll" href="#everything">Nhóm Sáng tạo</a>
                 </h4>
-                <h5>(Young Creative)</h5>
+                <h5>(PIJU Creative)</h5>
                 <!-- <p>
                     Chịu trách nhiệm về mặt nội dung và ý tưởng cho các sản phầm
                     truyền thông, MC cho các sự kiện trong trường.
@@ -440,24 +440,24 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide single-testimonial text-center">
                   <p>
-                    Câu lạc bộ Truyền Thông YTC – NTU là một sân chơi cho sinh viên yêu thích công việc truyền thông -
-                    sự kiện thông qua các kỹ năng hoạt động thực tế hơn so với lý thuyết giảng đường. Qua một năm hoạt
+                    CLB Phát Thanh và Truyền Thông PIJU là một sân chơi cho sinh viên yêu thích công việc phát thanh - truyền thông -
+                    sự kiện thông qua các kỹ năng hoạt động thực tế hơn so với lý thuyết. Qua một năm hoạt
                     động Câu lạc bộ đã tham gia và tổ chức nhiều các hoạt động truyền thông và giao lưu với các đơn vị
                     trong và ngoài trường.
                   </p>
                   <h5 class="author-name">
-                    Nguyễn Trần Công Huy (Chủ nhiệm)
+                    Nguyễn Thành Duy (Chủ nhiệm)
                   </h5>
                 </div>
                 <div class="swiper-slide single-testimonial text-center">
                   <p>
-                    Sinh hoạt trong Câu lạc bộ Truyền thông YTC - NTU, các bạn vừa có thể thể hiện thỏa sức đam mê cùng
+                    Sinh hoạt trong CLB Phát Thanh và Truyền Thông PIJU, các bạn vừa có thể thể hiện thỏa sức đam mê cùng
                     những người bạn có chung
                     sở thích, vừa phát huy được sở trường vì có môi trường để phát triển. Không chỉ thế, dành chút thời
                     gian để thư giãn và tham gia một vào hoạt động nào đó ngoài việc học giúp bạn giảm bớt căng thẳng và
                     đạt được hiệu quả tốt hơn trong học tập..
                   </p>
-                  <h5 class="author-name">Huỳnh Thị Xuân Hiếu (Phó chủ nhiệm)</h5>
+                  <h5 class="author-name">Phạm Đặng Quỳnh Nha (Phó chủ nhiệm)</h5>
                 </div>
                 <div class="swiper-slide single-testimonial text-center">
                   <p>
@@ -575,9 +575,9 @@
                 <div id="collapseOne" class="collapse show" data-parent="#accordionFaq">
                   <div class="card-body">
                     <p>
-                      Tất cả mọi người có đam mê với Truyền thông và Tổ chức
+                      Tất cả mọi người có đam mê với Phát thanh - Truyền thông và Tổ chức
                       sự kiện đều có thể tham gia Câu lạc bộ, kể cả những bạn
-                      không học tại trường Đại học Nha Trang. Tuy nhiên, để
+                      không học tại trường THPT Nguyễn Trãi Phú Yên. Tuy nhiên, để
                       trở thành thành viên chính thức của Câu lạc bộ, các bạn
                       cần hoạt động tích cực và vượt qua bào kiểm tra thành
                       viên Bậc 1.
@@ -594,9 +594,8 @@
                 <div id="collapseTwo" class="collapse" data-parent="#accordionFaq">
                   <div class="card-body">
                     <p>
-                      CLB Truyền thông YTC - NTU sinh hoạt hằng tuần vào mỗi
-                      18h39' thứ 5 tại phòng CLB ở tầng 2 tòa nhà A10, Đại học
-                      Nha Trang. Để thêm thông tin, bạn có thể chuyển xuống
+                      CLB Phát Thanh và Truyền Thông PIJU sinh hoạt hằng tuần vào mỗi
+                      18h39' thứ 5 tại phòng 201, Trường THPT Nguyễn Trãi Phú Yên. Để thêm thông tin, bạn có thể chuyển xuống
                       phần
                       <a class="page-scroll" href="#footer">Thông tin liên hệ</a>.
                     </p>
@@ -623,15 +622,14 @@
               </div>
               <div class="card">
                 <div class="card-header">
-                  <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseFour">Mình không là sinh
-                    viên trường Đại học Nha Trang, vậy có
+                  <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseFour">Mình không là học sinh trường THPT Nguyễn Trãi Phú Yên, vậy có
                     thể giam gia Câu lạc bộ hay không?</a>
                 </div>
                 <div id="collapseFour" class="collapse" data-parent="#accordionFaq">
                   <div class="card-body">
                     <p>
                       Có, Câu lạc bộ luôn chào đón tất cả mọi người có chung
-                      đam mê với Truyền thông và các hoạt động liên quan.
+                      đam mê với Phát thanh - Truyền thông và các hoạt động liên quan.
                     </p>
                   </div>
                 </div>
@@ -656,25 +654,25 @@
           <div class="col-lg-10">
             <div class="footer-widget-wrapper">
               <div class="footer-about mt-45">
-                <h4 class="footer-title">CLB Truyền thông YTC - NTU</h4>
+                <h4 class="footer-title">CLB Phát Thanh và Truyền Thông PIJU</h4>
                 <p>
                   Câu lạc bộ là sân chơi cho các bạn sinh viên yêu thích công
-                  việc truyền thông và tổ chức sự kiện thông qua các hoạt động
+                  việc phát thanh - truyền thông và tổ chức sự kiện thông qua các hoạt động
                   thực tế hơn so với lý thuyết trên giảng đường.
                 </p>
                 <ul class="social">
                   <li>
-                    <a target="_blank" href="https://www.facebook.com/YTC.NTU/"><i class="fab fa-facebook-f"></i></a>
+                    <a target="_blank" href="https://www.facebook.com//"><i class="fab fa-facebook-f"></i></a>
                   </li>
                   <li>
-                    <a target="_blank" href="https://www.instagram.com/ytc.ntu/"><i class="fab fa-instagram"></i></a>
+                    <a target="_blank" href="https://www.instagram.com//"><i class="fab fa-instagram"></i></a>
                   </li>
                   <li>
-                    <a target="_blank" href="https://www.youtube.com/c/CLBTruyềnThôngYTCNTU"><i
+                    <a target="_blank" href="https://www.youtube.com/c/"><i
                         class="fab fa-youtube"></i></a>
                   </li>
                   <li>
-                    <a target="_blank" href="https://www.tiktok.com/@ytcntuclub"><i class="fab fa-tumblr"></i></a>
+                    <a target="_blank" href="https://www.tiktok.com/"><i class="fab fa-tumblr"></i></a>
                   </li>
                 </ul>
               </div>
@@ -688,7 +686,7 @@
                       <i class="fas fa-phone-square"></i>
                       <div class="contact-text">
                         <p>
-                          <a href="tell:+84797776161">(+84) 79 777 6161 (Chủ nhiệm)</a>
+                          <a href="tell:+84945254361">(+84) 945-254-361 (Chủ nhiệm)</a>
                         </p>
                       </div>
                     </div>
@@ -698,7 +696,7 @@
                       <i class="fas fa-envelope"></i>
                       <div class="contact-text">
                         <p>
-                          <a href="mailto:truyenthongytc.ntu@gmail.com">truyenthongytc.ntu@gmail.com</a>
+                          <a href="mailto:voiceojnguyentrai@gmail.com">voiceofnguyentrai@gmail.com</a>
                         </p>
                       </div>
                     </div>
@@ -708,13 +706,12 @@
                       <i class="fas fa-map-marker-alt"></i>
                       <div class="contact-text">
                         <p>
-                          <a target="_blank" href="https://goo.gl/maps/8L6LA9zKUDwyQ7VS7">Tầng 3, Tòa nhà A10 <br />
-                            Trường Đại học Nha Trang
+                          <a target="_blank" href="https://goo.gl/maps/Acu6KaWATA7bracn7">153 Trần Phú, Phường 8, Tuy Hòa, Phú Yên, Việt Nam <br />
+                            Trường THPT Nguyễn Trãi Phú Yên
                           </a>
                         </p>
                         <p>
-                          02 Nguyễn Đình Chiểu, Vĩnh Thọ, Tp. Nha Trang, Khánh
-                          Hòa
+                          Số 153 Trần Phú, Phường 5, TP.Tuy Hòa, tỉnh Phú Yên
                         </p>
                       </div>
                     </div>
@@ -738,7 +735,7 @@
             document.write(new Date().getFullYear());
           </script>
           by
-          <a target="_blank" href="https://www.facebook.com/YTC.NTU/">CLB Truyền thông YTC - NTU</a>
+          <a target="_blank" href="https://www.facebook.com//">CLB Phát Thanh và Truyền thông PIJU</a>
         </p>
       </div>
     </div>
@@ -789,7 +786,7 @@
   </script>
 
   <!-- Your Plugin chat code -->
-  <div class="fb-customerchat" attribution="page_inbox" page_id="351631078580950"></div>
+  <div class="fb-customerchat" attribution="page_inbox" page_id="106034868496204"></div>
 </body>
 
 </html>
